--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_coupons_details_invalid.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_coupons_details_invalid.xml
@@ -39,7 +39,7 @@
             <android.support.v7.widget.CardView
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginTop="140dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -142,24 +142,12 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true">
-
-            <android.support.v7.widget.CardView
-                android:layout_width="300dp"
-                android:layout_height="200dp"
+            <ImageView
+                android:id="@+id/imageView_coupons_details"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="3dp">
-
-                <ImageView
-                    android:id="@+id/imageView_coupons_details"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/loading_card" />
-            </android.support.v7.widget.CardView>
+                android:src="@drawable/nike_logo" />
 
         </RelativeLayout>
 
