--- a/APP/IOS/PointExchange/PointExchange/ExchangeItemCellView.xib
+++ b/APP/IOS/PointExchange/PointExchange/ExchangeItemCellView.xib
@@ -57,9 +57,9 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="2000" textAlignment="center" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="KK4-51-cvY">
-                                    <rect key="frame" x="50.5" y="10.5" width="38.5" height="17"/>
-                                    <color key="textColor" red="0.60392156860000001" green="0.52549019610000003" blue="0.086274509799999996" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <rect key="frame" x="48.5" y="9" width="43" height="20"/>
+                                    <color key="textColor" red="0.65195283622999856" green="0.67225022303876536" blue="0.64158595645527428" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                 </textField>
                             </subviews>
